# Nucleus

./: CMakeLists.txt  Dockerfile  LICENSE.BGDC.md  LICENSE.MIT.md  README.md  remote-kernel-testing.gdb  remote-loader-testing-x64.gdb  remote-loader-testing.gdb
.github/workflows/: cmake.yml  docker-image.yml
Agnostic/: CMakeLists.txt
Agnostic/Kernel/: CMakeLists.txt
Agnostic/Kernel/Sources/: Bootstrap.S  Main.c  link.ld
Agnostic/LKInterface/: CMakeLists.txt
Agnostic/LKInterface/Includes/: Entry.h  FB.h  LKI.h
Agnostic/libc/: CMakeLists.txt
Agnostic/libc/Includes/: stdbool.h  stddef.h  stdlib.h
Agnostic/libc/Sources/stdio/: putchar.c  puts.c
Agnostic/libc/Sources/stdlib/: abort.c
Agnostic/libc/Sources/string/: memcmp.c  memmove.c  strlen.c
ELFLoader/: CMakeLists.txt
ELFLoader/Includes/: ELF.h
ELFLoader/Includes/ELF/: ProgramHeader.h  SectionHeader.h
ELFLoader/Sources/: ELF.c  Main.c  ProgramHeader.c  SectionHeader.c
Kernel/: CMakeLists.txt
Kernel/Sources/: Bootstrap.S  Magic.S  Main.c  link.ld
Kernel/Sources/Kernel/: Bootstrap.S  link.ld
LKInterface/: CMakeLists.txt
LKInterface/Includes/: Entry.h  FB.h  multiboot2.h  ssfn.h
LKInterface/Sources/: FB.c
Loader/: CMakeLists.txt
Loader/Includes/: ASMDefs.h  Blue.h  GDT.h  LoadKernel.h  defs.h
Loader/Sources/: Blue.c  Bootstrap.S  GDT.S  GDT.c  LoadKernel.c  Main.c
Shared/: grub.cfg  iso-tools.cmake  kos-toolchain.cmake
Shared/LoaderKernel/: Entry.h  FB.h
Specific/: CMakeLists.txt
Specific/amd64/: CMakeLists.txt  kos-toolchain.cmake  options.cmake  post.cmake
Specific/amd64/LKInterface/: CMakeLists.txt
Specific/amd64/LKInterface/Includes/: FBAdditional.h
Specific/amd64/LKInterface/Sources/: FB.c
Specific/amd64/Loader/: CMakeLists.txt
Specific/amd64/Loader/Includes/: IDT.h  LoadKernel.h
Specific/amd64/Loader/Sources/: Bootstrap.S  GDT.c  IDT.c  LoadKernel.c  Main.c  link.ld
Specific/amd64/Shared/: grub.cfg  iso-tools.cmake  link.ld
Specific/riscv64/: CMakeLists.txt  kos-toolchain.cmake  options.cmake
Specific/riscv64/LKInterface/: CMakeLists.txt
Specific/riscv64/Loader/: CMakeLists.txt
Specific/riscv64/Loader/Sources/: Bootstrap.S  Loader.c
Specific/x86/: CMakeLists.txt  post.cmake
Specific/x86/LKInterface/: CMakeLists.txt
Specific/x86/Loader/Includes/: LoadKernel.h
Specific/x86/Loader/Sources/: LoadKernel.c  Main.c
Specific/x86/Shared/: iso-tools.cmake
libc/: CMakeLists.txt
libc/Includes/: stdarg.h  stdint.h  stdio.h  string.h
libc/Includes/sys/: cdefs.h
libc/Sources/stdio/: printf.c
libc/Sources/string/: memcpy.c  memset.c
